SERVER-14608 Optimize out empty match stage in aggregation pipeline